--- a/modules/projects/client/views/project.abstract.html
+++ b/modules/projects/client/views/project.abstract.html
@@ -12,7 +12,7 @@
             <ui-view id="main-content-section"></ui-view>
         </section>
         <section class="main-panel" ng-if="authentication.user">
-            <ui-view id="main-content-section"></ui-view>
+            <ui-view class="derpdederp" id="main-content-section"></ui-view>
         </section>
 
         <!-- ACTIVITIES LIST -->
