--- a/modules/artifacts/client/views/artifact-display.html
+++ b/modules/artifacts/client/views/artifact-display.html
@@ -1,3 +1,4 @@
+
 <div ng-if="artifact.isTemplate">
 	<!--
 
@@ -17,9 +18,10 @@
 	    <div class="col-sm-12">
 
 
-	        <div class="panel panel-info">
-	            <div class="panel-heading">
-	            	Main Artifact Document
+	        <div class="panel panel-default">
+	            <div class="panel-heading clearfix">
+	            	<h2 class="pull-left">Main Artifact Document</h2>
+					<div class="pull-right"></div>
 	            </div>
 	            <div class="panel-body">
 	                <div class="file-horiz">
