--- a/modules/artifacts/client/views/artifact-edit.html
+++ b/modules/artifacts/client/views/artifact-edit.html
@@ -1,36 +1,40 @@
-<h1 class="page-title no-lower-margin">
-	Edit {{artifact.name}} ({{artifact.version}}) for {{ project.name }}
-</h1>
-
-<div class="row top-nav-lower-margin">
-	<div class="col-sm-12">
-		<div class="form-inline text-right">
-			<a class="btn btn-sm btn-link" ui-sref="p.detail">Cancel</a>
-			<a class="btn btn-sm btn-link" ng-click="remove()">Remove</a>
-			<a class="btn btn-sm btn-link" ng-click="save()">Save</a>
-			<a class="btn btn-sm btn-link" ng-click="saveas()">Save As</a>
-			<select ng-model="version" class="input-sm" ng-options="v as v for v in artifact.artifactType.versions"></select>
-			<a class="btn btn-sm btn-link" ng-click="submit()">Submit for {{buttons.next}}</a>
-		</div>
+<div class="edit-artifact-view">
+	<div class="view-title-container">
+		<h1>Edit Artifact &nbsp; &rsaquo; &nbsp; {{artifact.name}}</h1>
 	</div>
-</div>
 
-<!-- <div ng-include="'/modules/artifacts/client/views/partial.artifact-edit.html'"></div> -->
-
-<tmpl-artifact-display x-mode="'edit'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
-
-<div ng-include="'/modules/artifacts/client/views/partial.artifact-notes.html'"></div>
-
-<div ng-include="'/modules/artifacts/client/views/partial.artifact-comments.html'"></div>
-
-<div class="panel panel-default">
-	<div class="panel-body">
-		<div class="form-inline text-right">
-			<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-			<a class="btn btn-default" ng-click="save()">Save</a>
-			<a class="btn btn-default" ng-click="saveas()">Save As</a>
-			<select ng-model="version" class="form-control" ng-options="v as v for v in artifact.artifactType.versions"></select>
-			<a class="btn btn-default" ng-click="submit()">Submit for {{buttons.next}}</a>
+	<div class="view-body-container">
+		<div class="row top-nav-lower-margin hidden">
+			<div class="col-sm-12">
+				<div class="form-inline text-right">
+					<a class="btn btn-sm btn-link" ui-sref="p.detail">Cancel</a>
+					<a class="btn btn-sm btn-link" ng-click="remove()">Remove</a>
+					<a class="btn btn-sm btn-link" ng-click="save()">Save</a>
+					<a class="btn btn-sm btn-link" ng-click="saveas()">Save As</a>
+					<select ng-model="version" class="input-sm" ng-options="v as v for v in artifact.artifactType.versions"></select>
+					<a class="btn btn-sm btn-link" ng-click="submit()">Submit for {{buttons.next}}</a>
+				</div>
+			</div>
 		</div>
+
+		<!-- <div ng-include="'/modules/artifacts/client/views/partial.artifact-edit.html'"></div> -->
+
+		<tmpl-artifact-display x-mode="'edit'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
+
+		<div ng-include="'/modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+
+		<div ng-include="'/modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+
+		<div class="form-footer clearfix">
+			<div class="pull-right">
+				<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
+				<a class="btn btn-default" ng-click="save()">Save</a>
+				<a class="btn btn-default" ng-click="saveas()">Save As</a>
+				<select class="form-control" ng-model="version" ng-options="v as v for v in artifact.artifactType.versions"></select>
+				<a class="btn btn-default" ng-click="submit()">Submit for {{buttons.next}}</a>
+			</div>
+		</div>
+		
 	</div>
+
 </div>
