--- a/modules/templates/client/views/template-document-editor.html
+++ b/modules/templates/client/views/template-document-editor.html
@@ -1,23 +1,23 @@
-<div class="document-block">
-    <div class="document-block-header clearfix">
-        <h4 class="pull-left">{{ ::title }}</h4>
-        <a ng-if="editable" href x-modal-document-link class="btn btn-xs btn-link pull-right" x-current="curVal" x-project="project">+/- Link Documents</a>
+<div class="panel panel-default">
+    <div class="panel-heading clearfix">
+        <h2 class="pull-left">{{ ::title }}</h2>
+        <a class="btn btn-default btn-sm pull-right" ng-if="editable" href x-modal-document-link x-current="curVal" x-project="project">
+            +/- Link Documents
+        </a>
     </div>
-	<div class="panel panel-default">
-        <div class="panel-body">
-            <div class="thumbnails document-icon-list clearfix">
-                <div class="file" ng-repeat="file in filelist">
-                    <a class="file-horiz small" href="/api/document/{{ file._id }}/fetch" target="_blank">
-                        <span class="glyphicon glyphicon-file"></span>
-                        <span class="file-details">
-                            <h5>{{ file.internalOriginalName }}</h5>
-                            <small>{{ file.projectFolderType }} / {{ file.projectFolderSubType }} / {{ file.projectFolderName }}</small>
-                            <small ng-if="file.v">v.{{ file.documentVersion }}</small>
-                            <small>{{ file.dateUpdated | amDateFormat:'MMM Do'}}</small>
-                        </span>
-                    </a>
-                </div>
+    <div class="panel-body">
+        <div class="thumbnails document-icon-list clearfix">
+            <div class="file" ng-repeat="file in filelist">
+                <a class="file-horiz small" href="/api/document/{{ file._id }}/fetch" target="_blank">
+                    <span class="glyphicon glyphicon-file"></span>
+                    <span class="file-details">
+                        <h5>{{ file.internalOriginalName }}</h5>
+                        <small>{{ file.projectFolderType }} / {{ file.projectFolderSubType }} / {{ file.projectFolderName }}</small>
+                        <small ng-if="file.v">v.{{ file.documentVersion }}</small>
+                        <small>{{ file.dateUpdated | amDateFormat:'MMM Do'}}</small>
+                    </span>
+                </a>
             </div>
         </div>
-	</div>
+    </div>
 </div>
