Hiding the search toggle for project artifacts for demo - currently does not function

--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -19,7 +19,7 @@
 							</li>
 						</ul>
 					</div>
-					<show-filter x-toggle-filter="toggleFilter"></show-filter>
+					<show-filter class="hidden" x-toggle-filter="toggleFilter"></show-filter>
 				</div>
 			</div>
 			
