--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -48,7 +48,7 @@
 			<div class="detail-row">
 				<label>Project Lead</label>
 				<span class="value">
-					<span>{{ ::project.projectLead }}</span><br/>
+					<span>{{ ::project.projectLead | stripIDR }}</span><br/>
 					<span>Phone:&nbsp;&nbsp;{{ ::project.projectLeadPhone }}</span><br/>
 					<span>Email:&nbsp;&nbsp;<a href="mailto:{{ ::project.projectLeadEmail }}">{{ ::project.projectLeadEmail }}</a></span>
 				</span>
@@ -58,7 +58,7 @@
 			<div class="detail-row">
 				<label>Executive Project Director</label>
 				<span class="value">
-					<span>{{ ::project.responsibleEPD }}</span><br/>
+					<span>{{ ::project.responsibleEPD | stripIDR }}</span><br/>
 					<span>Phone:&nbsp;&nbsp;{{ ::project.responsibleEPDPhone }}</span><br/>
 					<span>Email:&nbsp;&nbsp;<a href="mailto:{{ ::project.responsibleEPDEmail }}">{{ ::project.responsibleEPDEmail }}</a></span>
 				</span>
@@ -68,7 +68,7 @@
 			<div class="detail-row">
 				<label>Compliance & Enforcement Lead</label>
 				<span class="value">
-					<span>{{ ::project.CELead }}</span><br/>
+					<span>{{ ::project.CELead | stripIDR }}</span><br/>
 					<span>Phone:&nbsp;&nbsp;{{ ::project.CELeadPhone }}</span><br/>
 					<span>Email:&nbsp;&nbsp;<a href="mailto:{{ ::project.CELeadEmail }}">{{ ::project.CELeadEmail }}</a></span>
 				</span>
