--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -146,7 +146,8 @@
 						Recent Documents
 					</li>
 				</ul>
-				<div class="file-browser-category">Legacy Documents</div>
+				<div ng-if="environment === 'EAO'"
+					 class="file-browser-category">Legacy Documents</div>
 				<ul>
 					<li class="row-folder clickable row-folder-depth-{{ row.depth }}" ng-class="{'active btn-primary': docBrowser.filterDocsSelected(row)}"
 						ng-click="docBrowser.filterList(row)"
