Sorting organizations by name in the modal-users-select.html organizations drop menu

--- a/modules/utils/client/views/partials/modal-users-select.html
+++ b/modules/utils/client/views/partials/modal-users-select.html
@@ -16,7 +16,7 @@
 						<option value="add">Add...</option>
 					</optgroup>
 					<optgroup label="Organizations">
-						<option ng-repeat="org in utilUsers.orgs" value="org:{{ org._id }}">{{ org.name }}</option>
+						<option ng-repeat="org in utilUsers.orgs | orderBy:'name'" value="org:{{ org._id }}">{{ org.name }}</option>
 					</optgroup>
 				</select>
 			</p>
