MEM: Sorting order of documents, hardcode selection list for first option in uploader

--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -134,7 +134,7 @@
 			
 			<!-- FOLDER HIERARCHY -->
 			<div class="col-sm-6 col-md-4 file-browser-list">
-				<ul>
+				<ul ng-if="environment === 'EAO'">
 					<li
 						ng-click="docBrowser.filterList(row)"
 						ng-hide="row.label === 'Not Specified'"
