--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -15,17 +15,16 @@
 		
 		<div class="panel panel-default">
 			<table ng-table="tableParams" show-filter="true" class="table table-hover table-striped">
-				<tr ng-repeat="o in $data" ui-sref="p.vc.detail({vcId:o._id})">
-					<td data-title="'Name'"   title:'Title'   filter="{'name':'text'}"       sortable="'name'">{{o.name}}</td>
-					<td data-title="'Title'"  title:'Title2'  filter="{'title': 'text'}"     sortable="'title'">{{o.title}}</td>
-					<td data-title="'Type'"   title:'Type'    filter="{'type':'text'}"       sortable="'type'"    >{{o.type}}</td>
-					<!--
-					<td data-title="'Sector'" title:'Sector'  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="data.ptypes" >{{o.sector}}</td>
-					<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
-					-->
-					<td data-title="'Pillar'" title:'Pillar'  filter="{'pillar':'select'}"   sortable="'pillar'"  filter-data="data.pillars">{{o.pillar}}</td>
+				<tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})">
+					<td data-title="'Name'"    filter="{'name':'text'}"     sortable="'name'"    >{{o.name}}</td>
+					<td data-title="'Version'" filter="{'version':'text'}"   	class="text-center" sortable="'version'"  >{{o.version}}</td>
+					<td data-title="'Stage'"   filter="{'stage':'text'}"    	class="text-center" sortable="'stage'"   >{{o.stage}}</td>
+					<td data-title="'Published'" sortable="'isPublished'"><i ng-if="o.isPublished" class="glyphicon glyphicon-ok"></i></td>
 					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
-						<a class="btn btn-link btn-sm" title="Edit Valued Component" ng-click="$event.stopPropagation()" ui-sref="p.vc.edit({vcId:o._id})">
+						<a class="btn btn-link btn-sm"
+						   title="Edit Valued Component"
+						   ng-click="$event.stopPropagation()"
+						   ui-sref="p.artifact.edit({artifactId:o._id})">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 					</td>
