--- a/modules/users/client/views/admin/user-list.html
+++ b/modules/users/client/views/admin/user-list.html
@@ -1,35 +1,43 @@
-<h1 class="page-title no-lower-margin">Users</h1>
-
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.user.create()">+ Add New User</a>
-		<show-filter x-toggle-filter="toggleFilter"></show-filter>
-	</div>
+<div class="view-title-container">
+	<h1>Users & Contacts</h1>
 </div>
 
-<div class="row">
-	<div class="col-sm-12">
-		<section class="panel panel-default">
-			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
-				<tr ng-repeat="o in $data" ui-sref="admin.user.detail({userId:o._id})" class="clickable">
-					<td data-title="'Name'"  filter="{'displayName':'text'}"   sortable="'displayName'"  filter-data="ptypes" >{{o.displayName}}</td>
-					<td data-title="'Username'"  filter="{'username':'text'}"   sortable="'username'"  filter-data="ptypes" >{{o.username}}</td>					
-					<td data-title="'Organization'" filter="{'orgName':'text'}"    sortable="'orgName'" >{{o.orgName}}</td>
-					<td class="text-center" data-title="'Phone'"   filter="{'phoneNumber':'text'}"  sortable="'phoneNumber'" >{{o.phoneNumber}}</td>
-					<td class="text-center" data-title="'Email'"  filter="{'email':'text'}" sortable="'email'"  >{{o.email}}</td>
-					<td width="1%" class="text-right">
-						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.user.edit({userId:o._id})">
-							<i class="glyphicon glyphicon-pencil"></i>
-						</a>
-					</td>
-				</tr>
-				<tr ng-if="!$data || $data.length === 0">
-					<td colspan="6">
-						No records found.
-					</td>
-				</tr>
-			</table>
-		</section>
+<div class="view-body-container">
+	
+	<div class="button-bar">
+		<a class="btn btn-default btn-sm" ui-sref="admin.user.create()">
+			<span class="glyphicon glyphicon-plus"></span><span>Add New User</span>
+		</a>
+		<div class="pull-right">
+			<show-filter x-toggle-filter="toggleFilter"></show-filter>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-12">
+			<section class="panel panel-default">
+				<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
+					<tr ng-repeat="o in $data" ui-sref="admin.user.detail({userId:o._id})" class="clickable">
+						<td data-title="'Username'"  filter="{'username':'text'}"   sortable="'username'"  filter-data="ptypes" >{{o.username}}</td>
+						<td data-title="'Full Name'"  filter="{'displayName':'text'}"   sortable="'displayName'"  filter-data="ptypes" >{{o.displayName}}</td>				
+						<td data-title="'Organization'" filter="{'orgName':'text'}"    sortable="'orgName'" >{{o.orgName}}</td>
+						<td class="text-center" data-title="'Phone'"   filter="{'phoneNumber':'text'}"  sortable="'phoneNumber'" >{{o.phoneNumber}}</td>
+						<td class="text-center" data-title="'Email'"  filter="{'email':'text'}" sortable="'email'"  >{{o.email}}</td>
+						<td class="actions-col action-x1" header-class="'actions-col action-x1'">
+							<a class="btn btn-link btn-sm" ng-click="$event.stopPropagation()" ui-sref="admin.user.edit({userId:o._id})">
+								<span class="glyphicon glyphicon-pencil"></span>
+							</a>
+						</td>
+					</tr>
+					<tr ng-if="!$data || $data.length === 0">
+						<td colspan="6">
+							No records found.
+						</td>
+					</tr>
+				</table>
+			</section>
+		</div>
+
 	</div>
 
 </div>
